<resources>
    <string name="app_name">JobPortal</string>
    <string name="company">Company:</string>
    <string name="enter_job_start_date_here">Enter job start date here</string>
    <string name="enter_company_name_here">Enter Company Name here</string>
    <string name="job_name">Job Name:</string>
    <string name="rs_166000_00">Rs.166000.00</string>
    <string name="apply_for_this_job">Apply For this job</string>
    <string name="enter_job_name_here">Enter job name here</string>
    <string name="enter_job_description_here">Enter job description here</string>
    <string name="job_description">Job Description:</string>
    <string name="estimated_budget">Estimated Budget:</string>
    <string name="start_date">Start Date</string>
    <string name="jobList">Job List :</string>
    <string name="addJob">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="acc_number">Account Number</string>
    <string name="branch">Branch</string>
    <string name="amount">Amount</string>
    <string name="enter_name">Enter cardholder name here</string>
    <string name="enter_acc_no">Enter account number here</string>
    <string name="make_payment">Make Payment</string>
    <string name="transaction_list">Transaction List</string>
    <string name="transaction">Transaction Name</string>
    <string name="enter_transaction">Enter Transaction Name</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate (1-10)</string>
    <string name="enter_name1">Enter Name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="submit">Submit</string>
    <string name="feedback_list">Feedback List</string>
    <string name="rate1">Rate</string>
    <string name="btn_post_job">POST JOB</string>
    <string name="btn_profile">PROFILE</string>
    <string name="btn_payment">PAYMENT</string>
    <string name="btn_feedback">FEEDBACK</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter PhoneNumber</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="user_profiles">User Profiles</string>
    <string name="home_title">WELCOME</string>
    <string name="back">Back</string>
    <string name="create_profile">Create Profile</string>
</resources>