<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/transaction"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTransName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_transaction"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAccName"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/acc_number"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAccNo"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_acc_no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <!-- Date -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/branch"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etBranch"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_job_start_date_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/rs_166000_00"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnTUpdate"
        android:layout_width="391dp"
        android:layout_height="76dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#00C988"
        android:onClick="saveTransaction"
        android:text="@string/make_payment"
        android:textColor="#795548"
        android:textSize="20sp" />

</LinearLayout>