<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_fullname"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <!-- Date -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_phone"
        android:inputType="number|phone"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="top"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnTUpdate"
        android:layout_width="391dp"
        android:layout_height="76dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#00C988"
        android:onClick="saveTransaction"
        android:text="@string/create_profile"
        android:textColor="#795548"
        android:textSize="20sp" />

</LinearLayout>