<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Job Description -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/job_description"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etJobDes"
        android:layout_width="375dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/enter_job_description_here"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textColorHint="#757575" />

    <!-- Company -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/company"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_company_name_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/job_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etJobName"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_job_name_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <!-- Date -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edStartDate"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_job_start_date_here"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/estimated_budget"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etBudget"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/rs_166000_00"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="391dp"
        android:layout_height="76dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#00C988"
        android:onClick="saveJob"
        android:text="@string/apply_for_this_job"
        android:textColor="#795548"
        android:textSize="20sp" />

</LinearLayout>